# advent-of-code-2021

./: .scalafmt.conf  BUILD.bazel  README.md  WORKSPACE.bazel
dev/chadxz/adventofcode/sonarsweep/: BUILD.bazel  README.md
dev/chadxz/helloworld/: BUILD.bazel
src/main/resources/: BUILD  BUILD.bazel
src/main/scala/dev/chadxz/adventofcode/binarydiagnostic/: BUILD.bazel  BinaryDiagnostic.scala  README.md
src/main/scala/dev/chadxz/adventofcode/dive/: BUILD.bazel  Dive.scala  README.md
src/main/scala/dev/chadxz/adventofcode/giantsquid/: BUILD.bazel  GiantSquid.scala  README.md
src/main/scala/dev/chadxz/adventofcode/sonarsweep/: BUILD.bazel  SonarSweep.scala
src/main/scala/dev/chadxz/helloworld/: BUILD.bazel  Hello.scala
