filegroup(
    name = "sonarsweep",
    srcs = glob(["dev/chadxz/adventofcode/sonarsweep/**/*"]),
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "dive",
    srcs = glob(["dev/chadxz/adventofcode/dive/**/*"]),
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "binarydiagnostic",
    srcs = glob(["dev/chadxz/adventofcode/binarydiagnostic/**/*"]),
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "giantsquid",
    srcs = glob(["dev/chadxz/adventofcode/giantsquid/**/*"]),
    visibility = ["//:__subpackages__"],
)
